tests/tests/snapshots/integration__run_file@main_stackoverflow_mutual.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/main_stackoverflow_mutual.gleam
---
STDOUT

STDERR
