tests/tests/snapshots/integration__run_file@main_todo.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/main_todo.gleam
---
STDOUT

STDERR
