tests/tests/snapshots/integration__run_file@runtime_panic.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/runtime_panic.gleam
---
STDOUT

STDERR
