tests/tests/snapshots/integration__run_file@smain_list_string.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/smain_list_string.gleam
---
STDOUT

STDERR
